bluejay-typegen/tests/validation_cases/error/enums_as_str_type_does_not_exist.rs
#[bluejay_typegen::typegen([
    type Query {
        foo: String
    }
], enums_as_str = ["Foo"])]
mod schema {}

fn main() {}
